@@ -2,6 +2,11 @@
 # Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
+  gen_compile.sh, genkernel:
+  Added patch from Fabio Erculiani <lxnay@lxnaydesign.net> to fix unionfs
+  compilation. This is for bug #152945.
+
   08 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
   gen_funcs.sh:
   Added patch from Martin Parm <parmus@diku.dk> to fix the --no-color option.
